<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars = "vertical"
    tools:context=".DangKyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="677dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/txtViewDangKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Đăng Ký"
            android:textColor="@color/xanhneon"
            android:textSize="26dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/xanhneon"
                android:ems="10"
                android:hint="@string/hovaten"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/xanhneon"
                android:textColorHint="@color/xanhneon"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="246dp"
                android:layout_height="match_parent"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/datebirth"
                    android:inputType="date"
                    android:text=""
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/button_date"
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_calendar_foreground" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/RGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giới tính"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/rdbNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nam"
                android:textSize="16sp"
                android:layout_marginLeft="15dp"/>

            <RadioButton
                android:id="@+id/rdbNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ"
                android:textSize="16sp"
                android:layout_marginLeft="15dp" />
            <RadioButton
                android:id="@+id/rdbKhac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Khác"
                android:textSize="16sp"
                android:layout_marginLeft="15dp"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="49dp"
                android:layout_height="75dp"
                android:ems="10"
                android:gravity="center"
                android:inputType=""
                android:maxLength="10"
                android:text="+84"
                android:textSize="16sp"
                android:textStyle="bold"
                android:backgroundTint="@color/xanhneon"
                android:textColor="@color/xanhneon"
                android:textColorHint="@color/xanhneon"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/xanhneon"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/phone"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="9"
                    android:text=""
                    android:textColor="@color/xanhneon"
                    android:textColorHint="@color/xanhneon"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:text=""
                android:textSize="16sp"
                android:backgroundTint="@color/xanhneon"
                android:textColor="@color/xanhneon"
                android:textColorHint="@color/xanhneon"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="Mật khẩu"
                android:inputType="textPassword"
                android:text=""
                android:textSize="16sp"
                android:backgroundTint="@color/xanhneon"
                android:textColor="@color/xanhneon"
                android:textColorHint="@color/xanhneon"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="Nhập lại mật khẩu"
                android:inputType="textPassword"
                android:text=""
                android:textSize="16sp"
                android:backgroundTint="@color/xanhneon"
                android:textColor="@color/xanhneon"
                android:textColorHint="@color/xanhneon"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="Đăng ký"
            android:textColor="#000000" />



        <TextView
            android:id="@+id/btnDangNhap"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="Đã đăng ký ? Đăng nhập"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>


</ScrollView>